@@ -57,6 +57,16 @@ public class RunningService {
         }
 
         shellCommand.add(path + "java");
+        shellCommand.addAll(Arrays.asList(
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+            "--add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+            "--add-opens=java.base/javax.net.ssl=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-opens=java.base/java.io=ALL-UNNAMED"
+        ));
         parametersBefore
             .forEach((key1, value1) -> shellCommand.add(key1 + '=' + value1));
 
